package co.edu.utp.misiontic.geovanny.modelo;

public enum EstadoPedido {
    SIN_ENTREGAR, PENDIENTE_COBRAR
}
